--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-<!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!DOCTYPE html>
+<!--[if lt IE 7]>	<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>		<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>		<html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
 		<title>Ray Pierce</title>
 		<meta name="description" content="Hello, my name is: Ray Pierce.">
-		<meta name="author" content="Ray Pierce">
+		<meta name="viewport" content="width=device-width">
 
-		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet'>
-		<!-- CSS concatenated and minified via ant build script-->
-		<link rel="stylesheet" href="css/style.css">
-		<!-- end CSS-->
 
-		<script src="js/libs/modernizr-2.0.6.min.js"></script>
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/main.css">
+
+		<script src="js/vendor/modernizr-2.6.1.min.js"></script>
 	</head>
 
 	<body>
-
+		<!--[if lt IE 7]>
+			<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+		<![endif]-->
 		<div id="container">
 			<header class="sticker shadow">
 				<div class="stickertitle">
@@ -48,31 +48,16 @@
 			</footer>
 		</div> <!--! end of #container -->
 
-		<!--
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
-		-->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
 
-		<!-- scripts concatenated and minified via ant build script-->
-		<!--
-		<script defer src="js/plugins.js"></script>
-		<script defer src="js/script.js"></script>
-		-->
-		<!-- end scripts-->
-
-
-		<script> // Change UA-XXXXX-X to be your site's ID
-			window._gaq = [['_setAccount','UA-5529331-1'],['_trackPageview']];
-			Modernizr.load({
-			  load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
-			});
+		<script>
+			var _gaq=[['_setAccount','UA-5529331-1'],['_trackPageview']];
+			(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+			g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+			s.parentNode.insertBefore(g,s)}(document,'script'));
 		</script>
-
-
-		<!--[if lt IE 7 ]>
-		<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-		<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-		<![endif]-->
-
 	</body>
 </html>
