Updated Twitter Link
Twitter changed their link structure, so I'm updating to the new one.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</div>
 				<div class="stickerbody clearfix">
 					<h1><span id="firstName">Ray</span> <span id="lastName">Pierce</span></h1>
-					<a href="https://twitter.com/#!/pierceray" target="_blank">@pierceray</a>
+					<a href="https://twitter.com/pierceray" target="_blank">@pierceray</a>
 				</div>
 			</header>
 
