changed generation of css to compressed. removed missing css reference that's now included as part of main.scss removed unused js file.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 		<title>Ray Pierce</title>
 		<meta name="description" content="Hello, my name is: Ray Pierce.">
 		<meta name="viewport" content="width=device-width">
-
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet'>
-
-		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
-
 		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
 
@@ -46,12 +42,7 @@
 			<footer>
 				<div>&copy; 2013 Ray Pierce</div>
 			</footer>
-		</div> <!--! end of #container -->
-
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-		<script src="js/plugins.js"></script>
-		<script src="js/main.js"></script>
+		</div>
 
 		<script>
 			var _gaq=[['_setAccount','UA-5529331-1'],['_trackPageview']];
