--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,11 @@
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet'>
 		<link rel="stylesheet" href="css/main.css">
-		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
 
 	<body>
-		<!--[if lt IE 7]>
-			<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+		<!--[if lt IE 9]>
+			<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser</a> today to better experience this site.</p>
 		<![endif]-->
 		<div id="container">
 			<header class="sticker shadow">
@@ -25,14 +24,14 @@
 					<span id="hello">Hello,</span>
 					<span id="mynameis">my name is:</span>
 				</div>
-				<div class="stickerbody clearfix">
+				<div class="stickerbody">
 					<h1><span id="firstName">Ray</span> <span id="lastName">Pierce</span></h1>
 					<a href="https://twitter.com/pierceray" target="_blank">@pierceray</a>
 				</div>
 			</header>
 
 			<div id="main" role="main">
-				<ul class="horiznav clearfix">
+				<ul class="horiznav">
 					<li><a href="http://www.linkedin.com/in/raypierce" target="_blank">LinkedIn</a></li>
 					<li><a href="https://github.com/pierceray" target="_blank">GitHub</a></li>
 					<li><a href="http://www.flickr.com/photos/pierceray/" target="_blank">flickr</a></li>
