--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Ray Pierce</title>
 		<meta name="description" content="Hello, my name is: Ray Pierce.">
+		<meta property="og:title" content="Hello, my name is: Ray Pierce."/>
+		<meta property="og:site_name" content="Digitalpierce.com"/>
+		<meta property="og:url" content="http://www.digitalpierce.com"/>
+		<meta property="og:description" content="Hello, My name is: Ray Pierce.  This is a little about me and what I do." />
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet'>
