--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="Hello, my name is: Ray Pierce.">
 		<meta property="og:title" content="Hello, my name is: Ray Pierce."/>
 		<meta property="og:site_name" content="Digitalpierce.com"/>
-		<meta property="og:url" content="http://www.digitalpierce.com"/>
+		<meta property="og:url" content="http://digitalpierce.com"/>
 		<meta property="og:description" content="Hello, My name is: Ray Pierce.  This is a little about me and what I do." />
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
