added twitter card meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,12 @@
 		<meta property="og:title" content="Hello, my name is: Ray Pierce."/>
 		<meta property="og:site_name" content="Digitalpierce.com"/>
 		<meta property="og:url" content="http://digitalpierce.com"/>
-		<meta property="og:description" content="Hello, My name is: Ray Pierce.  This is a little about me and what I do." />
+		<meta property="og:description" content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think." />
+		<meta name="twitter:card" content="summary"/>
+		<meta name="twitter:site" content="@pierceray"/>
+		<meta name="twitter:title" content="Hello, my name is: Ray Pierce."/>
+		<meta name="twitter:description" content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think." />
+		<meta name="twitter:url" content="http://digitalpierce.com"/>
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet'>
