--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<meta name="twitter:description" content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think." />
 		<meta name="twitter:url" content="http://digitalpierce.com"/>
 		<meta name="viewport" content="width=device-width">
+		<meta name="google-site-verification" content="sGiaP8SrZ5Fp5jBANiNwae-rmS2Nmy0eq9lf37nFuXw" />
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet'>
 		<link rel="stylesheet" href="css/main.css">
