--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<body>
 		<!--[if lt IE 9]>
-			<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser</a> today to better experience this site.</p>
+			<p class="chromeframe">You are using an outdated browser. Microsoft has eneded support for Internet Explorer 8 in all facets. <a href="http://browsehappy.com/">Upgrade your browser</a> today to better experience this site.</p>
 		<![endif]-->
 		<div id="container">
 			<header class="sticker shadow">
@@ -36,22 +36,32 @@
 				</div>
 				<div class="stickerbody">
 					<h1><span id="firstName">Ray</span> <span id="lastName">Pierce</span></h1>
-					<a href="https://twitter.com/pierceray" target="_blank">@pierceray</a>
 				</div>
 			</header>
 
 			<div id="main" role="main">
 				<ul class="horiznav">
-					<li><a href="http://www.linkedin.com/in/raypierce" target="_blank">LinkedIn</a></li>
+					<li><a href="https://twitter.com/pierceray" target="_blank">Twitter</a></li>
 					<li><a href="https://github.com/pierceray" target="_blank">GitHub</a></li>
-					<li><a href="http://www.flickr.com/photos/pierceray/" target="_blank">flickr</a></li>
+					<li><a href="http://www.linkedin.com/in/raypierce" target="_blank">LinkedIn</a></li>
 					<li><a href="http://blog.digitalpierce.com" target="_blank">Blog</a></li>
+					<li><a href="http://www.flickr.com/photos/pierceray/" target="_blank">flickr</a></li>
 				</ul>
 			</div>
 			<footer>
-				<div>&copy; 2015 Ray Pierce</div>
+				<div>&copy; 2016 Ray Pierce</div>
 			</footer>
 		</div>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- digitalpierce.com Homepage Ad -->
+		<ins class="adsbygoogle"
+		     style="display:block"
+		     data-ad-client="ca-pub-3793640569591407"
+		     data-ad-slot="5368212779"
+		     data-ad-format="auto"></ins>
+		<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
 
 		<script>
 			var _gaq=[['_setAccount','UA-5529331-1'],['_trackPageview']];
