Added some recommended widths for adsense ads
Fixes #1

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- digitalpierce.com Homepage Ad -->
-		<ins class="adsbygoogle"
+		<ins class="adsbygoogle homepagead"
 		     style="display:block"
 		     data-ad-client="ca-pub-3793640569591407"
 		     data-ad-slot="5368212779"
