Updated the Out of Date browser message and changed it to lte IE9

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
 	</head>
 
 	<body>
-		<!--[if lt IE 9]>
-			<p class="chromeframe">You are using an outdated browser. Microsoft has eneded support for Internet Explorer 8 in all facets. <a href="http://browsehappy.com/">Upgrade your browser</a> today to better experience this site.</p>
+		<!--[if lte IE 9]>
+			<p class="chromeframe">You are using an outdated browser. Beginning January 12, 2016, only the most current version of Internet Explorer available for a supported operating system will receive technical support and security updates. Please visit the Internet Explorer Lifecycle Policy <a href="https://support.microsoft.com/help/17454" target="_blank">FAQ</a> for a list of supported operating systems and browser combinations.<br><br>Migration guidance can be found <a href="https://technet.microsoft.com/en-us/microsoft-edge"> here</a>.</p>
 		<![endif]-->
 		<div id="container">
 			<header class="sticker shadow">
