--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 		<meta name="description" content="Hello, my name is: Ray Pierce.">
 		<meta property="og:title" content="Hello, my name is: Ray Pierce."/>
 		<meta property="og:site_name" content="Digitalpierce.com"/>
-		<meta property="og:url" content="http://digitalpierce.com"/>
+		<meta property="og:url" content="https://digitalpierce.com"/>
 		<meta property="og:description" content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think." />
 		<meta name="twitter:card" content="summary"/>
 		<meta name="twitter:site" content="@pierceray"/>
 		<meta name="twitter:title" content="Hello, my name is: Ray Pierce."/>
 		<meta name="twitter:description" content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think." />
-		<meta name="twitter:url" content="http://digitalpierce.com"/>
+		<meta name="twitter:url" content="https://digitalpierce.com"/>
 		<meta name="viewport" content="width=device-width">
 		<meta name="google-site-verification" content="sGiaP8SrZ5Fp5jBANiNwae-rmS2Nmy0eq9lf37nFuXw" />
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-		<link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet'>
+		<link href="https://fonts.googleapis.com/css?family=Loved+by+the+King" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 
@@ -39,8 +39,8 @@
 				<ul class="horiznav">
 					<li><a href="https://twitter.com/pierceray" target="_blank">Twitter</a></li>
 					<li><a href="https://github.com/pierceray" target="_blank">GitHub</a></li>
-					<li><a href="http://www.linkedin.com/in/raypierce" target="_blank">LinkedIn</a></li>
-					<li><a href="http://www.flickr.com/photos/pierceray/" target="_blank">flickr</a></li>
+					<li><a href="https://www.linkedin.com/in/raypierce/" target="_blank">LinkedIn</a></li>
+					<li><a href="https://www.flickr.com/photos/pierceray/" target="_blank">flickr</a></li>
 				</ul>
 			</div>
 			<footer>
@@ -58,14 +58,14 @@
 		(adsbygoogle = window.adsbygoogle || []).push({});
 		</script>
 
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-5529331-1"></script>
 		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-			gtag('config', 'UA-5529331-1');
+			ga('create', 'UA-5529331-1', 'auto');
+			ga('send', 'pageview');
 		</script>
 	</body>
 </html>
