feat: add instagram link

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,12 @@
 					<li><a href="https://twitter.com/pierceray" target="_blank">Twitter</a></li>
 					<li><a href="https://github.com/pierceray" target="_blank">GitHub</a></li>
 					<li><a href="https://www.linkedin.com/in/raypierce/" target="_blank">LinkedIn</a></li>
+					<li><a href="https://www.instagram.com/pierceray/" target="_blank">Instagram</a></li>
 					<li><a href="https://www.flickr.com/photos/pierceray/" target="_blank">flickr</a></li>
 				</ul>
 			</div>
 			<footer>
-				<div>&copy; 2018 Ray Pierce</div>
+				<div>&copy; 2019 Ray Pierce</div>
 			</footer>
 		</div>
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
