--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Loved+by+the+King" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="preconnect" href="https://csi.gstatic.com">
+		<link rel="preconnect" href="https://googleads.g.doubleclick.net">
+		<link rel="preconnect" href="https://tpc.googlesyndication.com">
 	</head>
 
 	<body>
