--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 		<meta name="viewport" content="width=device-width">
 		<meta name="google-site-verification" content="sGiaP8SrZ5Fp5jBANiNwae-rmS2Nmy0eq9lf37nFuXw" />
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="preconnect" href="https://csi.gstatic.com">
+		<link rel="dns-prefetch" href="https://csi.gstatic.com">
+		<link rel="preconnect" href="https://googleads.g.doubleclick.net">
+		<link rel="dns-prefetch" href="https://googleads.g.doubleclick.net">
+		<link rel="preconnect" href="https://tpc.googlesyndication.com">
+		<link rel="dns-prefetch" href="https://tpc.googlesyndication.com">
+		<link rel="preload" as="font" crossorigin="crossorigin" type="font/woff2" href="https://fonts.gstatic.com/s/lovedbytheking/v9/Gw6gwdP76VDVJNXerebZxUMeRXUF2MiKn3BM2g65.woff2">
 		<link href="https://fonts.googleapis.com/css?family=Loved+by+the+King" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="preconnect" href="https://csi.gstatic.com">
-		<link rel="preconnect" href="https://googleads.g.doubleclick.net">
-		<link rel="preconnect" href="https://tpc.googlesyndication.com">
 	</head>
 
 	<body>
