feat: add rel="noopener" to links

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
 		<link rel="dns-prefetch" href="https://googleads.g.doubleclick.net">
 		<link rel="preconnect" href="https://tpc.googlesyndication.com">
 		<link rel="dns-prefetch" href="https://tpc.googlesyndication.com">
-		<link rel="preload" as="font" crossorigin="crossorigin" type="font/woff2" href="https://fonts.gstatic.com/s/lovedbytheking/v9/Gw6gwdP76VDVJNXerebZxUMeRXUF2MiKn3BM2g65.woff2">
 		<link href="https://fonts.googleapis.com/css?family=Loved+by+the+King" rel="stylesheet">
+		<link rel="preload" as="font" crossorigin="crossorigin" type="font/woff2" href="https://fonts.gstatic.com/s/lovedbytheking/v9/Gw6gwdP76VDVJNXerebZxUMeRXUF2MiKn3BM2g65.woff2">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 
@@ -44,11 +44,11 @@
 
 			<div id="main" role="main">
 				<ul class="horiznav">
-					<li><a href="https://twitter.com/pierceray" target="_blank">Twitter</a></li>
-					<li><a href="https://github.com/pierceray" target="_blank">GitHub</a></li>
-					<li><a href="https://www.linkedin.com/in/raypierce/" target="_blank">LinkedIn</a></li>
-					<li><a href="https://www.instagram.com/pierceray/" target="_blank">Instagram</a></li>
-					<li><a href="https://www.flickr.com/photos/pierceray/" target="_blank">flickr</a></li>
+					<li><a href="https://twitter.com/pierceray" target="_blank" rel="noopener">Twitter</a></li>
+					<li><a href="https://github.com/pierceray" target="_blank" rel="noopener">GitHub</a></li>
+					<li><a href="https://www.linkedin.com/in/raypierce/" target="_blank" rel="noopener">LinkedIn</a></li>
+					<li><a href="https://www.instagram.com/pierceray/" target="_blank" rel="noopener">Instagram</a></li>
+					<li><a href="https://www.flickr.com/photos/pierceray/" target="_blank" rel="noopener">flickr</a></li>
 				</ul>
 			</div>
 			<footer>
