fix: add lang="en" and proper <html> element

--- a/src/index.html
+++ b/src/index.html
@@ -1,79 +1,166 @@
 <!DOCTYPE html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Ray Pierce</title>
-		<meta name="description" content="Hello, my name is: Ray Pierce.">
-		<meta property="og:title" content="Hello, my name is: Ray Pierce."/>
-		<meta property="og:site_name" content="Digitalpierce.com"/>
-		<meta property="og:url" content="https://digitalpierce.com"/>
-		<meta property="og:description" content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think." />
-		<meta name="twitter:card" content="summary"/>
-		<meta name="twitter:site" content="@pierceray"/>
-		<meta name="twitter:title" content="Hello, my name is: Ray Pierce."/>
-		<meta name="twitter:description" content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think." />
-		<meta name="twitter:url" content="https://digitalpierce.com"/>
-		<meta name="viewport" content="width=device-width">
-		<meta name="google-site-verification" content="sGiaP8SrZ5Fp5jBANiNwae-rmS2Nmy0eq9lf37nFuXw" />
-		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-		<link rel="preconnect" href="https://csi.gstatic.com">
-		<link rel="dns-prefetch" href="https://csi.gstatic.com">
-		<link rel="preconnect" href="https://googleads.g.doubleclick.net">
-		<link rel="dns-prefetch" href="https://googleads.g.doubleclick.net">
-		<link rel="preconnect" href="https://tpc.googlesyndication.com">
-		<link rel="dns-prefetch" href="https://tpc.googlesyndication.com">
-		<link href="https://fonts.googleapis.com/css?family=Loved+by+the+King" rel="stylesheet">
-		<link rel="preload" as="font" crossorigin="crossorigin" type="font/woff2" href="https://fonts.gstatic.com/s/lovedbytheking/v9/Gw6gwdP76VDVJNXerebZxUMeRXUF2MiKn3BM2g65.woff2">
-		<link rel="stylesheet" href="css/main.css">
-	</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Ray Pierce</title>
+    <meta name="description" content="Hello, my name is: Ray Pierce." />
+    <meta property="og:title" content="Hello, my name is: Ray Pierce." />
+    <meta property="og:site_name" content="Digitalpierce.com" />
+    <meta property="og:url" content="https://digitalpierce.com" />
+    <meta
+      property="og:description"
+      content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think."
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@pierceray" />
+    <meta name="twitter:title" content="Hello, my name is: Ray Pierce." />
+    <meta
+      name="twitter:description"
+      content="This is a little about me and what I do. Feel free to drop me a line and let me know what you think."
+    />
+    <meta name="twitter:url" content="https://digitalpierce.com" />
+    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="google-site-verification"
+      content="sGiaP8SrZ5Fp5jBANiNwae-rmS2Nmy0eq9lf37nFuXw"
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://csi.gstatic.com" />
+    <link rel="dns-prefetch" href="https://csi.gstatic.com" />
+    <link rel="preconnect" href="https://googleads.g.doubleclick.net" />
+    <link rel="dns-prefetch" href="https://googleads.g.doubleclick.net" />
+    <link rel="preconnect" href="https://tpc.googlesyndication.com" />
+    <link rel="dns-prefetch" href="https://tpc.googlesyndication.com" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Loved+by+the+King"
+      rel="stylesheet"
+    />
+    <link
+      rel="preload"
+      as="font"
+      crossorigin="crossorigin"
+      type="font/woff2"
+      href="https://fonts.gstatic.com/s/lovedbytheking/v9/Gw6gwdP76VDVJNXerebZxUMeRXUF2MiKn3BM2g65.woff2"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-	<body>
-		<!--[if lte IE 9]>
-			<p class="chromeframe">You are using an outdated browser. Beginning January 12, 2016, only the most current version of Internet Explorer available for a supported operating system will receive technical support and security updates. Please visit the Internet Explorer Lifecycle Policy <a href="https://support.microsoft.com/help/17454" target="_blank">FAQ</a> for a list of supported operating systems and browser combinations.<br><br>Migration guidance can be found <a href="https://technet.microsoft.com/en-us/microsoft-edge"> here</a>.</p>
-		<![endif]-->
-		<div id="container">
-			<header class="sticker shadow">
-				<div class="stickertitle">
-					<span id="hello">Hello,</span>
-					<span id="mynameis">my name is:</span>
-				</div>
-				<div class="stickerbody">
-					<h1><span id="firstName">Ray</span> <span id="lastName">Pierce</span></h1>
-				</div>
-			</header>
+  <body>
+    <!--[if lte IE 9]>
+      <p class="chromeframe">
+        You are using an outdated browser. Beginning January 12, 2016, only the
+        most current version of Internet Explorer available for a supported
+        operating system will receive technical support and security updates.
+        Please visit the Internet Explorer Lifecycle Policy
+        <a href="https://support.microsoft.com/help/17454" target="_blank"
+          >FAQ</a
+        >
+        for a list of supported operating systems and browser combinations.<br /><br />Migration
+        guidance can be found
+        <a href="https://technet.microsoft.com/en-us/microsoft-edge"> here</a>.
+      </p>
+    <![endif]-->
+    <div id="container">
+      <header class="sticker shadow">
+        <div class="stickertitle">
+          <span id="hello">Hello,</span>
+          <span id="mynameis">my name is:</span>
+        </div>
+        <div class="stickerbody">
+          <h1>
+            <span id="firstName">Ray</span> <span id="lastName">Pierce</span>
+          </h1>
+        </div>
+      </header>
 
-			<div id="main" role="main">
-				<ul class="horiznav">
-					<li><a href="https://twitter.com/pierceray" target="_blank" rel="noopener">Twitter</a></li>
-					<li><a href="https://github.com/pierceray" target="_blank" rel="noopener">GitHub</a></li>
-					<li><a href="https://www.linkedin.com/in/raypierce/" target="_blank" rel="noopener">LinkedIn</a></li>
-					<li><a href="https://www.instagram.com/pierceray/" target="_blank" rel="noopener">Instagram</a></li>
-					<li><a href="https://www.flickr.com/photos/pierceray/" target="_blank" rel="noopener">flickr</a></li>
-				</ul>
-			</div>
-			<footer>
-				<div>&copy; 2019 Ray Pierce</div>
-			</footer>
-		</div>
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<!-- digitalpierce.com Homepage Ad -->
-		<ins class="adsbygoogle homepagead"
-			style="display:block"
-			data-ad-client="ca-pub-3793640569591407"
-			data-ad-slot="5368212779"
-			data-ad-format="auto"></ins>
-		<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
+      <div id="main" role="main">
+        <ul class="horiznav">
+          <li>
+            <a
+              href="https://twitter.com/pierceray"
+              target="_blank"
+              rel="noopener"
+              >Twitter</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/pierceray"
+              target="_blank"
+              rel="noopener"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/raypierce/"
+              target="_blank"
+              rel="noopener"
+              >LinkedIn</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/pierceray/"
+              target="_blank"
+              rel="noopener"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.flickr.com/photos/pierceray/"
+              target="_blank"
+              rel="noopener"
+              >flickr</a
+            >
+          </li>
+        </ul>
+      </div>
+      <footer>
+        <div>&copy; 2019 Ray Pierce</div>
+      </footer>
+    </div>
+    <script
+      async
+      src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+    <!-- digitalpierce.com Homepage Ad -->
+    <ins
+      class="adsbygoogle homepagead"
+      style="display:block"
+      data-ad-client="ca-pub-3793640569591407"
+      data-ad-slot="5368212779"
+      data-ad-format="auto"
+    ></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function(i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function() {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        "//www.google-analytics.com/analytics.js",
+        "ga"
+      );
 
-			ga('create', 'UA-5529331-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-	</body>
+      ga("create", "UA-5529331-1", "auto");
+      ga("send", "pageview");
+    </script>
+  </body>
 </html>
