--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="dns-prefetch" href="https://csi.gstatic.com" />
     <link rel="dns-prefetch" href="https://tpc.googlesyndication.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Loved+by+the+King"
+      href="https://fonts.googleapis.com/css?family=Loved+by+the+King&display=swap"
       rel="stylesheet"
     />
     <link
