feat: only request font characters needed

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <link rel="dns-prefetch" href="https://csi.gstatic.com" />
     <link rel="dns-prefetch" href="https://tpc.googlesyndication.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Loved+by+the+King&display=swap"
+      href="https://fonts.googleapis.com/css?family=Loved+by+the+King&display=swap&text=Hello%2C%20my%20name%20is%3A%20Ray%20Pierce."
       rel="stylesheet"
     />
     <link
