--- a/src/index.html
+++ b/src/index.html
@@ -44,20 +44,6 @@
   </head>
 
   <body>
-    <!--[if lte IE 9]>
-      <p class="chromeframe">
-        You are using an outdated browser. Beginning January 12, 2016, only the
-        most current version of Internet Explorer available for a supported
-        operating system will receive technical support and security updates.
-        Please visit the Internet Explorer Lifecycle Policy
-        <a href="https://support.microsoft.com/help/17454" target="_blank"
-          >FAQ</a
-        >
-        for a list of supported operating systems and browser combinations.<br /><br />Migration
-        guidance can be found
-        <a href="https://technet.microsoft.com/en-us/microsoft-edge"> here</a>.
-      </p>
-    <![endif]-->
     <div id="container">
       <header class="sticker shadow">
         <div class="stickertitle">
@@ -116,7 +102,7 @@
         </ul>
       </div>
       <footer>
-        <div>&copy; 2019 Ray Pierce</div>
+        <div>&copy; 2020 Ray Pierce</div>
       </footer>
     </div>
     <script
@@ -126,7 +112,7 @@
     <!-- digitalpierce.com Homepage Ad -->
     <ins
       class="adsbygoogle homepagead"
-      style="display:block"
+      style="display: block;"
       data-ad-client="ca-pub-3793640569591407"
       data-ad-slot="5368212779"
       data-ad-format="auto"
@@ -136,11 +122,11 @@
     </script>
 
     <script>
-      (function(i, s, o, g, r, a, m) {
+      (function (i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
         (i[r] =
           i[r] ||
-          function() {
+          function () {
             (i[r].q = i[r].q || []).push(arguments);
           }),
           (i[r].l = 1 * new Date());
