--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
     <!-- digitalpierce.com Homepage Ad -->
     <ins
       class="adsbygoogle homepagead"
-      style="display: block;"
+      style="display: block"
       data-ad-client="ca-pub-3793640569591407"
       data-ad-slot="5368212779"
       data-ad-format="auto"
@@ -121,13 +121,18 @@
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-5529331-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-5529331-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-5529331-1');
+      gtag("config", "UA-5529331-1");
     </script>
   </body>
 </html>
